<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Choose Color</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red">RED</string>
    <string name="black">BLACK</string>
    <string name="brown">BROWN</string>
    <string name="gray">GRAY</string>
    <string name="white">WHITE</string>
    <string name="yellow">YELLOW</string>
    <string name="orange">ORANGE</string>
    <string name="pink">PINK</string>
    <string name="purple">PURPLE</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="score">Score: %d</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="high_score">High Score: %d</string>
    <string name="app_id">1034302919254</string>
    <string name="leaderboard_choose_color">CgkI1qSIio0eEAIQAg</string>
    <string name="how_to">How to play</string>
    <string name="share">Share</string>
    <string name="title_activity_how_to">HowToActivity</string>
    <string name="howtoplay">How to play the game is simple. You choose a color in 6 random colors below the box containing the color name. Name text color not color correct decision. You need to choose a right color with the name of the color, not the color of a color display. You only have 1 second to do it. Try to reach the highest point</string>
    <string name="close">Close</string>
    <string name="share_via">Share via...</string>
    <string name="rate">Rate</string>
    <string name="achievement_great">CgkI1qSIio0eEAIQAw</string>
    <string name="achievement_good">CgkI1qSIio0eEAIQBA</string>
    <string name="achievement_very_good">CgkI1qSIio0eEAIQBQ</string>
    <string name="achievement_super_man">CgkI1qSIio0eEAIQBg</string>
    <string name="achievement_crazy">CgkI1qSIio0eEAIQBw</string>
    <string name="achievement_are_you_cheat_">CgkI1qSIio0eEAIQCA</string>
</resources>
